# Lightweight-Gravitational-Transformer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  __init__.py  boxol_flower_mono.py  export_edge_model.py  fractal_position_embedding.py  gravitational_attention.py  lightweight_gravitational_transformer.py  octonion_pos_embedding.py  polymorphic_attention_orchestrator.py  pyproject.toml  requirements.txt  training.py  training_containment.py  tri_model.py  victorcos_module.py
.github/workflows/: boxol_flower_ci.yml  ci.yml
benchmarks/: bench_gravity_vs_sdp.py  benchmark_lgt.py
docs/: api.md  architecture.md  installation.md  user_guide.md
examples/: basic_inference.py  edge_export.py  language_model.py  tri_model_fusion.py  victorcos_integration.py
scripts/: boxol_flower_cli.py
src/boxol_flower/: __init__.py  boxol.py  cli.py
tests/: test_bench_gravity_vs_sdp.py  test_import.py  test_lgt.py
